--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,8 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "dedoc/scramble": "^0.8.6",
+        "doctrine/dbal": "^3.8",
         "guzzlehttp/guzzle": "^7.8",
         "laravel/breeze": "^1.29",
         "laravel/framework": "^10.10",
